0.30    2009-08-12

- Allow the first argument to ->limit to be 0.


0.29    2009-08-12

- Allow subselects on the right hand side of a where clause comparison using
  =, !=, or <>.


0.28    2009-05-14

- Fixed the tests to pass with newer Moose. No code changes.


0.27    2009-04-18

- All SQL objects now implement a clone() method.


0.26    2009-04-04

- Some uses of Fey::SQL::Fragment::SubSelect were still lingering in
  the code, so a fresh install failed. Reported by Chad Granum.


0.25    2009-04-01

- Major internals changes to how aliasable things are created and
  used. Added two new roles, Fey::Role::MakesAliasObjects, and
  Fey::Role::HasAliasName. All literals can now be aliased (including
  Terms). A subselect is now just a Fey::SQL::Select object
  internally, which makes the internals much cleaner. This also means
  that a Fey::SQL::Select has an ->alias_name. Implemented by Dieter
  Pearcey.

- Added support for "NULLS FIRST/LAST" in ORDER BY
  clauses. Implemented by Erik Rijkers. RT #44656.


0.24    2009-03-26

- Support for UNION, INTERSECT, and EXCEPT queries. Implemented by
  Dieter Pearcey.


0.23    2009-03-23

- Fey::SQL::Insert did not make sure that the order of the
  bind_params() it returned actually matched the order of the columns
  in the "INSERT ... INTO" clause. It accidentally worked sometimes
  but was fundamentally broken. This only mattered if you were using
  the auto_placeholders feature, so it did not affect
  Fey::ORM. Reported and diagnosed by Dieter Pearcey.


0.22    2009-02-24

- A table that was passed to $sql->from($table) and also included in a
  join could show up in the FROM clause twice. Based on a patch from
  Dieter Pearcey.

- Fey::Literal::Term now accepts a list of items which it joins
  together. These items can be strings or Fey objects like columns or
  tables. This makes generating arbitrary of SQL snippets
  easier. Based on a patch from Dieter Pearcey.


0.21    2009-02-24
